--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
     <%= csp_meta_tag %>
 
     <link rel="stylesheet" href="https://use.typekit.net/uju8khj.css">
-    <script src="https://cdn.passage.id/passage-web.js"></script>
+    <link href="https://api.mapbox.com/mapbox-gl-js/v2.11.0/mapbox-gl.css" rel="stylesheet">
 
     <%= vite_client_tag %>
     <%= vite_typescript_tag 'base' %>
