--- a/app/frontend/entrypoints/modders.scss
+++ b/app/frontend/entrypoints/modders.scss
@@ -19,6 +19,7 @@ body.modders.show {
         background-color: $platinum;
         border-radius: 64px;
         margin-left: -2px;
+        background-size: cover;
       }
 
       .city {
