--- a/app/views/modders/show.html.erb
+++ b/app/views/modders/show.html.erb
@@ -6,7 +6,7 @@
 
   <section class="span-8 info">
     <div class="meta">
-      <figure class="logo"></figure>
+      <figure class="logo" style="<%= "background-image: url(#{@modder.logo_url})" if @modder.logo.present? %>"></figure>
       <div>
         <h1><%= @modder.name %></h1>
         <p class="city"><%= inline_svg_tag 'pin' %><%= @modder.city %></p>
