--- a/app/frontend/typography.scss
+++ b/app/frontend/typography.scss
@@ -15,6 +15,10 @@ a {
     color: lighten($indigo, 15%);
   }
 
+  &.big {
+    font-size: 18px;
+  }
+
   .dark & {
     color: $spice;
 
@@ -24,7 +28,12 @@ a {
   }
 }
 
-h1, h2, h3, p, ol, ul {
+h1,
+h2,
+h3,
+p,
+ol,
+ul {
   margin: 0;
 
   & + h1,
@@ -41,7 +50,9 @@ h1, h2, h3, p, ol, ul {
   }
 }
 
-h1, h2, h3 {
+h1,
+h2,
+h3 {
   font-weight: bold;
 }
 
