vite fixes and logo selector

--- a/app/frontend/entrypoints/base.scss
+++ b/app/frontend/entrypoints/base.scss
@@ -6,5 +6,6 @@
 @import "../flash";
 @import "../form";
 @import "../text-input";
+@import "../file-input";
 @import "../textarea";
 @import "../button";
