--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -44,22 +44,17 @@
     </div>
 
     <div class="span-4 caption">
-      <%= form.label :logo, 'Logo', class: 'label large' %>
+      <p class="label large">Logo</p>
       <p class="small">Upload a logo to display by your name. Recommended minimum size: 128 x 128 pixels. Maximum 500kb.</p>
     </div>
 
     <div class="span-8 input-container">
       <%=
-        @modder.logo_url
+        react_component "LogoSelector", {
+          field_name: 'modder[logo]',
+          logo_url: @modder.logo_url
+        }
       %>
-      <%= render 'form_field', locals: {
-        resource: @modder,
-        form: form,
-        field_name: :logo,
-        field_type: :file_field,
-        label: false,
-        options: { class: 'text-input large', placeholder: 'Drop image here' }
-      } %>
     </div>
 
     <div class="span-4 caption">
