--- a/app/frontend/components/LogoSelector.scss
+++ b/app/frontend/components/LogoSelector.scss
@@ -11,20 +11,54 @@
     background-position: center;
     border-radius: 64px;
     background-color: $platinum;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     position: relative;
-  }
+    color: darken($platinum, 20%);
+    overflow: hidden;
 
-  input {
-    appearance: none;
-    display: block;
-    opacity: 0;
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    cursor: pointer;
+    .upload-overlay {
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      visibility: hidden;
+      pointer-events: none;
+      color: #fff;
+      background-color: rgba($black, 20%);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      svg {
+        width: 24px;
+        height: 24px;
+      }
+    }
+
+    &:hover .upload-overlay {
+      visibility: visible;
+    }
+
+    > svg {
+      width: 64px;
+      height: 64px;
+    }
+
+    input {
+      appearance: none;
+      display: block;
+      opacity: 0;
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      cursor: pointer;
+    }
   }
 }
