--- a/app/frontend/header.scss
+++ b/app/frontend/header.scss
@@ -94,6 +94,15 @@ header {
         position: relative;
         z-index: 105;
         background-size: cover;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        color: darken($platinum, 20%);
+
+        svg {
+          width: 24px;
+          height: 24px;
+        }
 
         &:hover {
           opacity: 1;
