--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -24,7 +24,7 @@
         field_name: :name,
         field_type: :text_field,
         label: false,
-        options: { autofocus: true, class: 'text-input large', placeholder: 'Something Something Customs' }
+        options: { class: 'text-input large', placeholder: 'Something Something Customs' }
       } %>
     </div>
 
