--- a/app/frontend/entrypoints/modders.scss
+++ b/app/frontend/entrypoints/modders.scss
@@ -20,6 +20,7 @@ body.modders.show {
         border-radius: 64px;
         margin-left: -2px;
         background-size: cover;
+        background-position: center;
         display: flex;
         align-items: center;
         justify-content: center;
