--- a/app/frontend/header.scss
+++ b/app/frontend/header.scss
@@ -94,6 +94,7 @@ header {
         position: relative;
         z-index: 105;
         background-size: cover;
+        background-position: center;
         display: flex;
         align-items: center;
         justify-content: center;
