--- a/app/frontend/components/ServiceSelector.scss
+++ b/app/frontend/components/ServiceSelector.scss
@@ -1,4 +1,5 @@
 @import "@/colors";
+@import "@/service-pill";
 
 .ServiceSelector {
   .service-selector__control {
@@ -32,20 +33,16 @@
     }
 
     .service-selector__multi-value {
-      display: flex;
-      align-items: center;
-      margin: 0;
+      @extend .service-pill;
       padding: 0 20px 0 16px;
-      height: 32px;
-      font-size: 14px;
-      text-transform: uppercase;
-      font-weight: bold;
-      letter-spacing: 1px;
-      line-height: 1;
-      box-shadow: inset 0 0 0 2px var(--service-color, $platinum);
-      color: var(--service-color, $platinum);
-      border-radius: 32px;
       cursor: grab;
+
+      &:hover {
+        color: var(--service-color, $platinum);
+        background-color: #fff;
+        box-shadow: inset 0 0 0 2px var(--service-color, $platinum),
+          0 8px 8px -12px $black !important;
+      }
 
       .service-selector__multi-value__remove {
         position: relative;
@@ -95,37 +92,34 @@
     }
 
     .service-selector__option {
+      @extend .service-pill;
       width: auto;
-      display: flex;
-      align-items: center;
-      margin: 0;
-      padding: 0 16px;
-      height: 32px;
-      font-size: 14px;
-      text-transform: uppercase;
-      font-weight: bold;
-      letter-spacing: 1px;
-      line-height: 1;
-      box-shadow: inset 0 0 0 2px var(--service-color, $platinum);
-      color: var(--service-color, $platinum);
-      border-radius: 32px;
       cursor: pointer;
+
+      &:hover {
+        color: var(--service-color, $platinum);
+        background-color: #fff;
+        box-shadow: inset 0 0 0 2px var(--service-color, $platinum),
+          0 8px 8px -12px $black !important;
+      }
     }
   }
 }
 
 .service-selector__multi-value {
-  display: flex;
-  align-items: center;
-  margin: 0;
+  @extend .service-pill;
   padding: 0 20px 0 16px;
-  height: 32px;
-  font-size: 14px;
-  text-transform: uppercase;
-  font-weight: bold;
-  letter-spacing: 1px;
-  line-height: 1;
-  box-shadow: inset 0 0 0 2px var(--service-color, $platinum);
-  color: var(--service-color, $platinum);
-  border-radius: 32px;
+
+  .service-selector__multi-value__remove {
+    position: relative;
+    top: -1px;
+    left: 8px;
+    color: $platinum;
+    cursor: pointer;
+
+    svg {
+      width: 15px;
+      height: 15px;
+    }
+  }
 }
