--- a/app/frontend/entrypoints/application.scss
+++ b/app/frontend/entrypoints/application.scss
@@ -1,7 +1,6 @@
 @import "../colors";
 
 body.application.index {
-
   main {
     padding-top: 0;
   }
@@ -16,5 +15,19 @@ body.application.index {
     background-size: cover;
     padding: 220px 0 48px;
     margin: -80px 0 64px;
+  }
+
+  .service-list {
+    list-style: none;
+    margin: 16px 0 0;
+    padding: 0;
+    display: flex;
+    flex-flow: row wrap;
+    gap: 12px;
+
+    li {
+      margin: 0;
+      padding: 0;
+    }
   }
 }
