--- a/app/views/application/_footer.html.erb
+++ b/app/views/application/_footer.html.erb
@@ -2,7 +2,7 @@
   <div class="content grid">
 
     <div class="span-6">
-      <p class="small">DOL-003 is named after the product number of the original Nintendo GameCube controller, and exists as a love letter to GCCs and the community that exists around them. <%= link_to 'Learn more about DOL-003', about_path %>.</p>
+      <p class="small">DOL-003 is the product number of the original Nintendo GameCube controller, and DOL-003.info exists as an unofficial repository of GCC information and community modders. <%= link_to 'Learn more about DOL-003', about_path %></p>
       <p class="small">© <%= Date.today.year %>. All rights reserved. <%= link_to 'Terms of service', terms_path %>.</p>
     </div>
 
