--- a/app/frontend/text-input.scss
+++ b/app/frontend/text-input.scss
@@ -11,6 +11,11 @@
   background-color: #fff;
   max-width: 100%;
 
+  &.search {
+    border-radius: 48px;
+    padding: 0 24px 1px;
+  }
+
   &:hover {
     box-shadow: inset 0 0 0 2px darken($platinum, 20%), 0 8px 8px -12px $black;
   }
