--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -51,9 +51,6 @@
     <p>blah</p>
   </section>
 
-  <section class="span-8">
-    <h2>Are you a modder? <strong>Get listed.</strong></h2>
-    <p>blah</p>
-  </section>
+  <%= render 'get_listed' %>
 
 </div>
