photo manager foundation

--- a/app/frontend/foundation.scss
+++ b/app/frontend/foundation.scss
@@ -7,8 +7,8 @@
   -moz-osx-font-smoothing: grayscale;
 
   // @media (prefers-color-scheme: dark) {
-    // -webkit-font-smoothing: initial;
-    // -moz-osx-font-smoothing: initial;
+  // -webkit-font-smoothing: initial;
+  // -moz-osx-font-smoothing: initial;
   // }
 }
 
@@ -19,5 +19,5 @@ html {
 body {
   box-sizing: border-box;
   min-height: 100vh;
-  background-color: $white;
+  background-color: $offwhite;
 }
