--- a/app/frontend/entrypoints/modders.scss
+++ b/app/frontend/entrypoints/modders.scss
@@ -5,7 +5,40 @@ body.modders.show {
     height: 20vw;
     min-height: 180px;
     max-height: 280px;
-    background-color: skyblue;
+    position: relative;
+
+    > button {
+      position: absolute;
+      bottom: 24px;
+      left: 24px;
+      color: #fff;
+      visibility: hidden;
+      box-shadow: inset 0 0 0 2px $white;
+
+      &:hover {
+        box-shadow: inset 0 0 0 2px $white, 0 8px 8px -12px $black;
+        background-color: rgba($white, 10%) !important;
+      }
+
+      &:active {
+        background-color: rgba($black, 10%);
+        box-shadow: inset 0 0 0 2px $white, inset 0 2px 10px -6px $black;
+      }
+    }
+
+    &:hover {
+      background: radial-gradient(
+        ellipse at bottom left,
+        rgba($black, 30%),
+        rgba($black, 20%) 20%,
+        rgba($black, 0%) 30%,
+        rgba($black, 0%)
+      );
+
+      & > button {
+        visibility: visible;
+      }
+    }
   }
 
   section.info {
