--- a/app/views/application/_react_component.html.erb
+++ b/app/views/application/_react_component.html.erb
@@ -1,1 +1,5 @@
-<div class="react-container" data-component="<%= locals[:component] %>" data-props="<%= locals[:props] %>"></div>
+<div
+  class="react-container react-container-<%= locals[:component] %>"
+  data-component="<%= locals[:component] %>"
+  data-props="<%= locals[:props] %>"
+></div>
