--- a/app/frontend/components/PhotoManager.scss
+++ b/app/frontend/components/PhotoManager.scss
@@ -23,8 +23,16 @@
     position: relative;
     height: 100%;
     z-index: 10010;
+    display: flex;
+    gap: 32px;
+    overflow-x: auto;
+
+    img {
+      height: 100%;
+    }
 
     .uploader {
+      flex: none;
       width: 280px;
       height: 100%;
       display: flex;
@@ -59,9 +67,14 @@
         cursor: pointer;
       }
 
-      &:hover,
-      &.droppable {
+      &:not(.uploading):hover,
+      &:not(.uploading).droppable {
         color: darken($platinum, 20%);
+      }
+
+      &.uploading > input {
+        pointer-events: none;
+        cursor: default;
       }
     }
   }
@@ -81,30 +94,51 @@
     }
   }
 
-  > button.secondary {
-    position: absolute;
-    bottom: 24px;
-    left: 24px;
-    color: #fff;
-    visibility: hidden;
-    box-shadow: inset 0 0 0 2px $white;
+  .gallery {
+    height: 100%;
+    display: flex;
+    gap: 32px;
+    overflow-x: auto;
 
-    &:hover {
-      box-shadow: inset 0 0 0 2px $white, 0 8px 8px -12px $black;
-      background-color: rgba($white, 10%);
-    }
-
-    &:active {
-      box-shadow: inset 0 0 0 2px $white, inset 0 2px 10px -6px $black;
-      background-color: rgba($black, 10%);
+    img {
+      height: 100%;
     }
   }
 
-  .signed-in-modder:hover &:not(.open):hover {
+  .toggle-container {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    top: 0;
+    padding: 24px;
+    pointer-events: none;
+    display: flex;
+    align-items: flex-end;
+
+    > button.secondary {
+      color: #fff;
+      visibility: hidden;
+      box-shadow: inset 0 0 0 2px $white;
+      pointer-events: all;
+
+      &:hover {
+        box-shadow: inset 0 0 0 2px $white, 0 8px 8px -12px $black;
+        background-color: rgba($white, 10%);
+      }
+
+      &:active {
+        box-shadow: inset 0 0 0 2px $white, inset 0 2px 10px -6px $black;
+        background-color: rgba($black, 10%);
+      }
+    }
+  }
+
+  .signed-in-modder:hover &:not(.open):hover .toggle-container {
     background: radial-gradient(
       ellipse at bottom left,
-      rgba($black, 30%),
-      rgba($black, 20%) 20%,
+      rgba($black, 50%),
+      rgba($black, 40%) 20%,
       rgba($black, 0%) 30%,
       rgba($black, 0%)
     );
