photo carousel styling

--- a/app/frontend/entrypoints/modders.scss
+++ b/app/frontend/entrypoints/modders.scss
@@ -6,6 +6,27 @@ body.modders.show {
     min-height: 180px;
     max-height: 280px;
     position: relative;
+
+    > .photo-container {
+      width: 100vw;
+      height: 100%;
+      display: flex;
+      gap: 32px;
+      overflow-x: auto;
+      position: relative;
+      left: calc((100vw - 100%) / -2);
+      padding: 0 calc((100vw - 100%) / 2);
+      -ms-overflow-style: none;
+      scrollbar-width: none;
+
+      &::-webkit-scrollbar {
+        display: none;
+      }
+
+      img {
+        height: 100%;
+      }
+    }
   }
 
   section.info {
