--- a/app/frontend/components/PhotoManager.scss
+++ b/app/frontend/components/PhotoManager.scss
@@ -234,35 +234,37 @@
     align-items: center;
     justify-content: center;
 
-    > button.secondary {
-      color: #fff;
+    > .frame {
+      flex: none;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background-color: rgba($black, 80%);
+      border-radius: 64px;
       visibility: hidden;
-      box-shadow: inset 0 0 0 2px $white;
-      pointer-events: all;
-      background-color: rgba($white, 20%);
 
-      &:hover {
-        box-shadow: inset 0 0 0 2px $white, 0 8px 8px -12px $black;
-        background-color: rgba($white, 30%);
-      }
+      > button.secondary {
+        color: #fff;
+        box-shadow: inset 0 0 0 2px $white;
+        pointer-events: all;
+        background-color: rgba($white, 20%);
+        margin: 24px;
 
-      &:active {
-        box-shadow: inset 0 0 0 2px $white, inset 0 2px 10px -6px $black;
-        background-color: rgba($black, 10%);
+        &:hover {
+          box-shadow: inset 0 0 0 2px $white, 0 8px 8px -12px $black;
+          background-color: rgba($white, 30%);
+        }
+
+        &:active {
+          box-shadow: inset 0 0 0 2px $white, inset 0 2px 10px -6px $black;
+          background-color: rgba($black, 10%);
+        }
       }
     }
   }
 
   .signed-in-modder:hover &:not(.open):hover .toggle-container {
-    background: radial-gradient(
-      ellipse at center,
-      rgba($black, 60%),
-      rgba($black, 50%) 20%,
-      rgba($black, 0%) 70%,
-      rgba($black, 0%)
-    );
-
-    & > button {
+    & > .frame {
       visibility: visible;
     }
   }
