--- a/app/frontend/colors.scss
+++ b/app/frontend/colors.scss
@@ -2,6 +2,7 @@ $white: #fff;
 $offwhite: #fafafa;
 $black: #222;
 $platinum: #b8bfbf;
+$panasonic: #6d6b6b;
 $indigo: #444f9a;
 $spice: #fdb03a;
 $mario: #c12022;
