--- a/app/frontend/components/ServiceSelector.scss
+++ b/app/frontend/components/ServiceSelector.scss
@@ -9,6 +9,7 @@
     border-radius: 8px;
     background-color: #fff;
     cursor: pointer;
+    transition: none;
 
     &:hover {
       box-shadow: inset 0 0 0 2px darken($platinum, 20%), 0 8px 8px -12px $black;
