--- a/app/frontend/text-input.scss
+++ b/app/frontend/text-input.scss
@@ -16,6 +16,18 @@
     padding: 0 24px 1px;
   }
 
+  &.large {
+    width: 360px;
+  }
+
+  &.xlarge {
+    width: 480px;
+  }
+
+  &.full-width {
+    width: 100%;
+  }
+
   &:hover {
     box-shadow: inset 0 0 0 2px darken($platinum, 20%), 0 8px 8px -12px $black;
   }
@@ -24,8 +36,10 @@
     box-shadow: inset 0 0 0 2px $spice, inset 0 2px 10px -6px $black;
   }
 
-  &.large {
-    width: 360px;
+  &:disabled {
+    background-color: transparent;
+    box-shadow: inset 0 0 0 2px $platinum;
+    color: $panasonic;
   }
 
   &::placeholder {
