--- a/app/views/modders/index.html.erb
+++ b/app/views/modders/index.html.erb
@@ -30,7 +30,10 @@
         <%=
           react_component "LocationSelector", {
             class: 'search',
-            geolocator: true
+            geolocator: true,
+            city: @city || "",
+            latitude: @latitude || "",
+            longitude: @longitude || ""
           }
         %>
       </div>
