--- a/app/views/modders/index.html.erb
+++ b/app/views/modders/index.html.erb
@@ -29,7 +29,7 @@
         <label class="label">Location</label>
         <%=
           react_component "LocationSelector", {
-            class: 'search',
+            class: 'search large',
             geolocator: true,
             city: @city || "",
             latitude: @latitude || "",
