--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -65,6 +65,7 @@
     <div class="span-8 input-container">
       <%=
         react_component "LocationSelector", {
+          class: 'large',
           model_name: 'modder',
           city: @modder.city,
           latitude: @modder.latitude,
